pull from iogrow
Former-commit-id: 08727b7d3e7e02ceb9cf018791e6a87200cbd53b [formerly e7132408f90a3202ebe71fbaf49a099cf16fcef6] [formerly d24ad0767dd2c697dfd34424e7a53de32e6a50fb [formerly 62cfdb8d007123cc37f86274c01aee96cea2da79]]
Former-commit-id: 862519324da70bad7f16eb243fee397888229b9f [formerly 8b1b9589ad627c4a8024c911985fee7ab518d1d0]
Former-commit-id: 77e8e516172a9c1af71dea50e76f366dd448f13f

--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -123,7 +123,7 @@
                <i class="fa fa-calendar"></i>  <%=event.ends_at | date:'yyyy-MM-dd - HH:mm:ss '%></span>
                <div ng-show="showEndsCalendar" class="input-icon">
                      <i class="fa fa-calendar"></i>
-                     <input cusdatetimepicker  data-model="event.ends_at" type="text" class="form-control" placeholder="From" value="" id="leadEventStartsAt">
+                     <input cusdatetimepicker close-on-selected=false data-model="event.ends_at" type="text" class="form-control" placeholder="From" value="" id="leadEventStartsAt">
                </div>
               </div>
               <div class="clearfix margin-bottom-15"></div>
@@ -145,7 +145,7 @@
                 <div class="portlet-title line">
                   <div class="caption"><i class="icon-comments"></i>Comments</div>
                 </div>
-                <div class="portlet-body">
+                <div claccoass="portlet-body">
                       <ul class="chats">
                         <li class="in" ng-repeat="comment in comments" id="comment_<%=$index%>">
                           <img class="avatar" alt="" ng-src="<%=comment.author.photo%>" />
@@ -170,7 +170,7 @@
             <div class="showPage col-md-12">
                   <div class="row">
         <div class="col-md-12">
-             <div class="portlet">
+               <div class="portlet">
                 <div class="portlet-body">
                      <p class⁼"lead"=""><strong>Add New Comment :</strong> </p>
                       <form id="addComment"  class=" ng-pristine ng-valid">
