redirect start iogrow to sign-in page
Former-commit-id: be81a26797dc7fbeb36d99dac2cb8727437e7042 [formerly 08e03280f5890dafe7c505673a23315d875f09f4] [formerly a3f52752b89b50a24cffdf215e9ed9962a7078d3 [formerly 3c2476d3d7248d0abc1082e45c293799b44dd1db]]
Former-commit-id: 439279eebded2703696939c0535d9c370ccee02a [formerly 48043b1fca9277b738705a596cefaf628bb4f1a2]
Former-commit-id: a162d1516b4527d842bf14daa3d66f07e132fcc7

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -213,7 +213,7 @@
 
                            <div id="gSignInWrapper" align="center">
                               <div id="customBtn" class="customGPlusSignIn">
-                                <a href="/early-bird" >
+                                <a href="/sign-in" >
                                 <span class="icon"></span>
                                 <span class="buttonText">Start using ioGrow for free!</span></a>
                               </div>
