fix task.due date bugs on the api
Former-commit-id: 4352532b4f36b6f74015c4d777d8fe0c76dfd101 [formerly cf89099acb0bbe0cefea5e37e3fc2fc2c20db357] [formerly 91f0015731d04d9580a69832b79e0703371f062c [formerly a10011492cf92c4524aafa4eb701cc2675393149]]
Former-commit-id: 22a91ca72cc7c3a5d2e130a8780ced6920bf446e [formerly 9b40c36ef5a1eb30c2b3e2332cb59bbfaffabec1]
Former-commit-id: a99c203d6a04aea094988b69a14d5adb7f203643

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -134,7 +134,7 @@
                                   <li ng-hide="tasks" class="task-actions taskCard list-group-item task-actions">
                                        <div class="row">
                                        <div class="col-md-12">
-                                             <p class="taskNoresult">{{ _('No results found') }}</p>
+                                             <p class="taskNoresult">{{ _('No tasks found') }}</p>
                                         </div>
                                       </div>
                                     </li>
@@ -192,7 +192,7 @@
                                           <a href="/#/tasks/show/<%= task.id %>"> <%= task.title %></a>
                                           <%=task.due%>
                                        </h4>
-                                      
+
                                        <div ng-show="edited_task==task" class="col-md-6 col-xs-7">
                                        <form ng-submit="done_edit_task(task)">
                                           <input ng-type="text" class="form-control inlineEditTask" ng-blur="done_edit_task(task)" ng-model="task.title">
@@ -215,7 +215,7 @@
                                           <span ng-show="task.about">{{ _('related to') }}<a href="<%= getUrl(task.about.kind,task.about.id); %>"> <%= task.about.name %></a> </span>
                                           <span ng-show="deletetask">
                                              <!-- to delete task -->
-                                                <a  ng-click="deleteThisTask(task.entityKey)" class="btn-link addAnotherPhone"><i class="icon-trash"></i>  
+                                                <a  ng-click="deleteThisTask(task.entityKey)" class="btn-link addAnotherPhone"><i class="icon-trash"></i>
                                              </a>
                                            <!-- end  -->
                                           </span>
@@ -611,7 +611,7 @@
                        <a ng-click="" class="btn-link addAnotherPhone">
                         <i class="fa fa-tags"></i>  Add a new tag</a>
                   </li>
-                  
+
                 </ul>
 
                 <form class="well newTagForm" role="form" ng-show="showNewTag">
@@ -775,9 +775,9 @@
                            <a ng-click="" class="btn-link addAnotherPhone">
                             <i class="fa fa-tags"></i>  Add a new tag</a>
                       </li>
-                      
+
                     </ul>
-                    </div>  
+                    </div>
                     <form class="well newTagForm" role="form" ng-show="showNewTag">
                      <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button>
                     <div class="row">
@@ -824,7 +824,7 @@
                     <!--h3 class="pagination pull-right" ng-show="isLoading">{{ _('Loading') }}...</h3-->
               </div>
             <!-- END PAGE CONTENT-->
-          
+
       <!-- END PAGE CONTAINER-->
 </div>
        <script type="text/javascript">
