fix a bug on blog handler
Former-commit-id: f11f5039f6816c83f0fc4942d00272f45290953b [formerly 9a751520ce43c034df3586c4be5f7ad056a8eb19] [formerly 1f67df941c50856a089c4282fa766be65a857382 [formerly 5c8dc4b0047e19a0571b23ac29389549193f660f]]
Former-commit-id: ab2c1127d4713bdabbf68f5b87e7edbd080e539d [formerly 1d0bc8583cef60a5db42ab47e412c729b8519685]
Former-commit-id: 8ca2468d22f45f953442d6a1c7443ebaaacb15ba

--- a/templates/blog/blog_base.html
+++ b/templates/blog/blog_base.html
@@ -346,6 +346,7 @@
 
 </div>
 <div class="clearfix"></div>
+<input type="hidden" id="userEmail" value="{{user.email}}">
 <!-- END FOOTER -->
 <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
 <!-- BEGIN CORE PLUGINS -->
