fix a bug on support page
Former-commit-id: 7af5a039006f229922c43cf8f4a60d443b70dea0 [formerly ca7cf855ee1de6ebcd32e1afe353b6a34b1f006e] [formerly 7a56fe69f94bfe87ad3220cf67e3718559964ae0 [formerly a3253fb4959c563645d1a4cc9e159cba3d7159f7]]
Former-commit-id: 327a9336ce90a2f1ffc98d9560798cea6796ff71 [formerly 56910f1cc629d8d2dbea787db95521bad113095c]
Former-commit-id: 0521923a73439956692f1e3ad81f35bd06729313

--- a/templates/blog/public_support.html
+++ b/templates/blog/public_support.html
@@ -22,7 +22,7 @@
       </span>
     </div>
   </div>
-<div ng-show="isContentLoaded" class="row">
+<div class="row">
   <div class="col-md-9">
     <div class="row">
 
