--- a/templates/base.html
+++ b/templates/base.html
@@ -397,9 +397,9 @@
 
 
 
-     //var ROOT = '/_ah/api';
+     var ROOT = '/_ah/api';
 
- var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+ //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
         var callback = function() {
@@ -476,7 +476,8 @@
   <script src="/static/app/scripts/services/liveservices/companyprofileservices.js" ></script>
   <script src="/static/app/scripts/services/noteservices.js" ></script>
   <script src="/static/app/scripts/services/commentservices.js" ></script>
-   <script src="/static/app/scripts/services/settingservices.js" ></script>
+  <script src="/static/app/scripts/services/settingservices.js" ></script>
+  <script src="/static/app/scripts/services/importservices.js" ></script>
 
 
 
@@ -500,6 +501,7 @@
   <script src="/static/app/scripts/controllers/usercontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/groupcontrollers.js" ></script>
   <script src="/static/app/scripts/controllers/settingscontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/importcontrollers.js" ></script>
 
   <script src="/static/app/scripts/controllers/livecontrollers/comp_profilecontrollers.js"></script>
   <script src="/static/app/scripts/controllers/leadcontrollers.js" ></script>
