we can't edit a tag , we can just delete a tag and rewrite it , # 658
Former-commit-id: 77a8c97f26ea6cc25a962f5044e9cc1f2c561ca9 [formerly 37c435bf501941eb6e028dbaad80d75b6db31383] [formerly 2e03451460517a7755da49bcff920cb519094e0e [formerly 0333b47389aa9ccb73b71aa01def882a01a7b127]]
Former-commit-id: 847354fccbd229d7fd735a483175ab8561d5b7d2 [formerly cdd02511bbfd2ffe1458185c149ebe6e83c4f284]
Former-commit-id: 2cc39778b2ed791458c58daf35f91d08d7346b1f

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -237,7 +237,8 @@
             <ul class="list-group tags-list">
               <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  ng-drag="dragTag(tag_item)" >
                 <div class="row">
-                  <span draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;">
+                  <span  editable-text="tag_item.name" draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"
+                    ng-model='tag_item.name'  onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
                       <%= tag_item.name %>
                   </span>
                 <input type="checkbox" ng-show="!manage_tags" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
